# rm-to-trash-hook

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rm-to-trash
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  distribution.md  install-claude-code.md  install-codex.md  rewrite-contract.md
src/: install.rs  main.rs  rewrite.rs  trash_backend.rs
