[package]
name = "rm-to-trash"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
regex = "=1.12.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tree-sitter = "=0.25.10"
tree-sitter-bash = "=0.25.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
