[package]
name = "rm-to-trash"
version = "1.1.0"
edition = "2021"
rust-version = "1.85"
description = "Rewrite recoverable rm commands to the macOS Trash in Claude Code and Codex hooks"
license = "MIT"
repository = "https://github.com/ShlomoStept/rm-to-trash-hook"
readme = "README.md"
keywords = ["claude-code", "codex", "hooks", "macos", "trash"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
regex = "=1.13.1"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
tree-sitter = "=0.26.11"
tree-sitter-bash = "=0.25.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
